--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,6 +149,8 @@ dependencies {
     implementation "com.google.firebase:firebase-auth:16.0.2"
     implementation "com.google.firebase:firebase-firestore:17.0.2"
     implementation "com.google.firebase:firebase-storage:16.0.1"
+    implementation "com.google.firebase:firebase-messaging:17.1.0"
+    implementation 'me.leolin:ShortcutBadger:1.1.21@aar'
 }
 
 // Run this once to be able to run the application with BUCK
