--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -151,6 +151,7 @@ dependencies {
     implementation "com.google.firebase:firebase-storage:16.0.1"
     implementation "com.google.firebase:firebase-messaging:17.1.0"
     implementation 'me.leolin:ShortcutBadger:1.1.21@aar'
+    implementation "com.google.firebase:firebase-ads:15.0.1"
 }
 
 // Run this once to be able to run the application with BUCK
