--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.application"
+apply plugin: "io.fabric"
 
 import com.android.build.OutputFile
 
@@ -152,6 +153,10 @@ dependencies {
     implementation "com.google.firebase:firebase-messaging:17.1.0"
     implementation 'me.leolin:ShortcutBadger:1.1.21@aar'
     implementation "com.google.firebase:firebase-ads:15.0.1"
+
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.4@aar') {
+      transitive = true
+    }
 }
 
 // Run this once to be able to run the application with BUCK
